<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="appbar_scrolling_view_behavior" />
    <string name="teams">Team</string>

    <string name="favorites">Favorites</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>

    <array name="leagues">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Day_Theme">Day Theme</string>
    <string name="Night_Theme">Night Theme</string>
    <string name="app_title">Football Match Schedule</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_click_here">Don\'t Have Account? Click Here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="back_to_login_page">Back To Login Page</string>
    <string name="home_name">Home Name</string>
    <string name="away_name">Away Name</string>
    <string name="goals">Goals</string>
    <string name="vs">VS</string>
    <string name="formation">Formation</string>
    <string name="shots">Shots</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="lineupgoalkeeper">LineupGoalkeeper</string>
    <string name="lineupdefense">LineupDefense</string>
    <string name="lineupmidfield">LineupMidfield</string>
    <string name="lineupforward">LineupForward</string>
    <string name="lineupsubstitutes">LineupSubstitutes</string>
</resources>
