<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/lastmatch"
        android:enabled="true"
        android:title="@string/last_match"
        android:icon="@drawable/ic_lastmatch"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nextmatch"
        android:enabled="true"
        android:icon="@drawable/ic_nextmatch"
        android:title="@string/next_match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>