<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/trophy"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:gravity="center"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:id="@+id/etUsername"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:id="@+id/etPassword"
                android:inputType="textPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/btnRegister"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:text="@string/back_to_login_page"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:id="@+id/tvBackLogin"
                android:textSize="15sp"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>